--- a/website/package.json
+++ b/website/package.json
@@ -35,8 +35,9 @@
     "@rsbuild/plugin-sass": "1.4.0",
     "@rsbuild/plugin-type-check": "1.2.4",
     "@rsbuild/plugin-typed-css-modules": "1.0.3",
-    "@rspress/core": "2.0.0-beta.28",
-    "@rspress/plugin-client-redirects": "2.0.0-beta.28",
+    "@rspress/core": "2.0.0-beta.30",
+    "@rspress/plugin-client-redirects": "2.0.0-beta.30",
+    "@rspress/plugin-twoslash": "2.0.0-beta.30",
     "@shikijs/transformers": "3.11.0",
     "@types/react": "npm:@types/react@^19.1.10",
     "@types/react-dom": "^19.1.7",
