ci(benchmark): increase timeout to 30 minutes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -237,6 +237,7 @@ jobs:
     uses: ./.github/workflows/workflow-website.yml
   done:
     needs:
+      - benchmark
       - code-style-check
       - eslint
       - playwright-linux
