--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Install wasm-bindgen
         uses: taiki-e/install-action@14083e64ac8cf1f5e54356df00b9779b23e192a1 # v2
         with:
-          tool: wasm-bindgen
+          tool: wasm-bindgen@0.2.101
       - name: Install
         run: |
           npm install -g corepack@latest
