--- a/packages/web-platform/web-style-transformer/Cargo.toml
+++ b/packages/web-platform/web-style-transformer/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 inline-style-parser = { path = "../inline-style-parser" }
 js-sys = "0.3.77"
 lazy_static = "1.5.0"
-wasm-bindgen = "0.2.88"
+wasm-bindgen = "=0.2.101"
 
 [profile.release]
 opt-level = 3
