--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -29,6 +29,11 @@ jobs:
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
         with:
           node-version: "24"
+      - uses: astral-sh/setup-uv@4959332f0f014c5280e7eac8b70c90cb574c9f9b # v6
+      - uses: actions-rust-lang/setup-rust-toolchain@ac90e63697ac2784f4ecfe2964e1a285c304003a # v1
+        with:
+          target: wasm32-unknown-unknown
+          cache-key: test-ubuntu-copilot-setup-steps
       - name: Install wasm-bindgen
         uses: taiki-e/install-action@14083e64ac8cf1f5e54356df00b9779b23e192a1 # v2
         with:
@@ -44,19 +49,6 @@ jobs:
           pnpm turbo build --summarize
         env:
           NODE_OPTIONS: --max-old-space-size=6144
-        continue-on-error: true
-      - name: Setup Rust and retry build if failed
-        if: steps.build.outcome == 'failure'
-        uses: actions-rust-lang/setup-rust-toolchain@ac90e63697ac2784f4ecfe2964e1a285c304003a # v1
-        with:
-          target: wasm32-unknown-unknown
-          cache-key: test-ubuntu-copilot-setup-steps
-      - name: Retry Build
-        if: steps.build.outcome == 'failure'
-        run: |
-          pnpm turbo build --summarize
-        env:
-          NODE_OPTIONS: --max-old-space-size=32768
       - name: Test essential runtime dependencies
         run: |
           pnpm dprint fmt
