--- a/packages/lynx/benchx_cli/turbo.json
+++ b/packages/lynx/benchx_cli/turbo.json
@@ -3,6 +3,7 @@
   "extends": ["//"],
   "tasks": {
     "build": {
+      "env": ["ECOSYSTEM_CI"],
       "dependsOn": [],
       "inputs": ["scripts/build.mjs"],
       "outputs": ["dist/**"]
