--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -17,6 +17,10 @@ on:
         required: false
         type: boolean
         default: false
+      web-report-name:
+        required: false
+        type: string
+        default: "playwright-report"
       codecov-flags:
         required: false
         type: string
@@ -88,7 +92,7 @@ jobs:
         if: ${{ inputs.is-web && failure() }}
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
-          name: playwright-report
+          name: ${{ inputs.web-report-name }}
           path: packages/web-platform/web-tests/playwright-report
           if-no-files-found: error
           retention-days: 1
