refactor: migrate to Cargo workspace

--- a/packages/web-platform/web-style-transformer/Cargo.toml
+++ b/packages/web-platform/web-style-transformer/Cargo.toml
@@ -8,6 +8,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 inline-style-parser = { path = "../inline-style-parser" }
-js-sys = "0.3.77"
-lazy_static = "1.5.0"
-wasm-bindgen = "=0.2.101"
+js-sys = { workspace = true }
+lazy_static = { workspace = true }
+wasm-bindgen = { workspace = true }
