ci(benchmark/react): enable fuzz benchmark

--- a/benchmark/react/tsconfig.json
+++ b/benchmark/react/tsconfig.json
@@ -8,11 +8,14 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedDeclarations": false,
+    "allowImportingTsExtensions": true,
   },
   "include": [
     "rspeedy-env.d.ts",
     "src",
-    "lynx.config.js",
+    "plugins",
+    "scripts",
+    "lynx.config.ts",
     "cases",
     "vitest.config.ts",
   ],
