--- a/benchmark/react/package.json
+++ b/benchmark/react/package.json
@@ -10,6 +10,8 @@
     "bench:003-hello-list": "benchx_cli run dist/003-hello-list.lynx.bundle --wait-for-id=stop-benchmark-true",
     "bench:004-various-update": "benchx_cli run dist/004-various-update.lynx.bundle --wait-for-id=stop-benchmark-true",
     "bench:005-load-script": "benchx_cli run dist/005-load-script.lynx.bundle",
+    "bench:006-fuzz-complex-1000": "benchx_cli run dist/006-fuzz-complex-1000.lynx.bundle --wait-for-id=stop-benchmark-true",
+    "bench:006-fuzz-complex-2000": "benchx_cli run dist/006-fuzz-complex-2000.lynx.bundle --wait-for-id=stop-benchmark-true",
     "build": "rspeedy build",
     "dev": "rspeedy dev",
     "perfetto": "pnpm run --sequential --stream --aggregate-output '/^perfetto:.*/'",
@@ -18,6 +20,8 @@
     "perfetto:003-hello-list": "benchx_cli -o dist/003-hello-list.ptrace run dist/003-hello-list.lynx.bundle --wait-for-id=stop-benchmark-true",
     "perfetto:004-various-update": "benchx_cli -o dist/004-various-update.ptrace run dist/004-various-update.lynx.bundle --wait-for-id=stop-benchmark-true",
     "perfetto:005-load-script": "benchx_cli -o dist/005-load-script.ptrace run dist/005-load-script.lynx.bundle",
+    "perfetto:006-fuzz-complex-1000": "benchx_cli -o dist/006-fuzz-complex-1000.ptrace run dist/006-fuzz-complex-1000.lynx.bundle --wait-for-id=stop-benchmark-true",
+    "perfetto:006-fuzz-complex-2000": "benchx_cli -o dist/006-fuzz-complex-2000.ptrace run dist/006-fuzz-complex-2000.lynx.bundle --wait-for-id=stop-benchmark-true",
     "test": "echo 'No tests specified'"
   },
   "dependencies": {
@@ -34,6 +38,7 @@
     "@lynx-js/rspeedy": "workspace:*",
     "@lynx-js/type-element-api": "0.0.2",
     "@lynx-js/types": "3.4.11",
-    "@types/react": "^18.3.23"
+    "@types/react": "^18.3.23",
+    "human-id": "4.1.1"
   }
 }
