refactor: add empty swc_plugin pkgs and CODEOWNERS for progressive migration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,4 @@
 packages/web-platform/** @pupiltong
 packages/webpack/** @colinaaa
 packages/rspeedy/** @colinaaa
+packages/react/transform/** @gaoachao
