--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ resolver = "2"
 
 members = [
   "packages/react/transform",
+  "packages/react/transform/swc-plugin-reactlynx",
+  "packages/react/transform/swc-plugin-reactlynx-compat",
   "packages/web-platform/inline-style-parser",
   "packages/web-platform/web-style-transformer",
 ]
