--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,6 @@
 packages/web-platform/** @pupiltong
 packages/webpack/** @colinaaa
 packages/rspeedy/** @colinaaa
+packages/react/** @hzy
 packages/react/transform/** @gaoachao
+benchmark/react/** @hzy
