--- a/packages/react/transform/swc-plugin-reactlynx-compat/turbo.json
+++ b/packages/react/transform/swc-plugin-reactlynx-compat/turbo.json
@@ -4,7 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": [],
-      "inputs": ["src/**/*.rs", "Cargo.toml", "build.js"],
+      "inputs": [".cargo/**", "src/**/*.rs", "Cargo.toml", "build.js"],
       "outputs": ["swc_plugin_reactlynx_compat.wasm"]
     }
   }
