--- a/packages/react/transform/Cargo.toml
+++ b/packages/react/transform/Cargo.toml
@@ -11,8 +11,8 @@ crate-type = ["cdylib"]
 convert_case = { workspace = true }
 hex = { workspace = true }
 indexmap = { workspace = true }
-napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
-napi-derive = "2.7.0"
+napi = { workspace = true }
+napi-derive = { workspace = true }
 once_cell = { workspace = true }
 regex = { workspace = true }
 rustc-hash = { workspace = true }
@@ -20,6 +20,8 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["preserve_order"] }
 sha-1 = { workspace = true }
 swc_core = { workspace = true, features = ["base", "ecma_codegen", "ecma_parser", "ecma_minifier", "ecma_transforms_typescript", "ecma_utils", "ecma_quote", "ecma_transforms_react", "ecma_transforms_optimization", "css_parser", "css_ast", "css_visit", "css_codegen", "__visit", "__testing_transform"] }
+swc_plugin_css_scope = { path = "./crates/swc_plugin_css_scope" }
+swc_plugins_shared = { path = './crates/swc_plugins_shared' }
 version-compare = { workspace = true }
 
 [target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies.getrandom]
