--- a/packages/react/transform/crates/swc_plugins_shared/Cargo.toml
+++ b/packages/react/transform/crates/swc_plugins_shared/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 path = "lib.rs"
 
 [dependencies]
+convert_case = { workspace = true }
 hex = { workspace = true }
 napi = { workspace = true }
 napi-derive = { workspace = true }
