--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5
         with:
           node-version: "24"
+          package-manager-cache: false
       - name: Install wasm-bindgen
         uses: taiki-e/install-action@8ea32481661d5e04d602f215b94f17e4014b44f9 # v2
         with:
@@ -121,6 +122,7 @@ jobs:
         with:
           node-version: "24"
           registry-url: "https://registry.npmjs.org"
+          package-manager-cache: false
       - name: Install
         run: |
           npm install -g corepack@latest
@@ -168,6 +170,7 @@ jobs:
         with:
           node-version: "24"
           registry-url: "https://registry.npmjs.org"
+          package-manager-cache: false
       - name: Install
         run: |
           npm install -g corepack@latest
