--- a/packages/react/transform/Cargo.toml
+++ b/packages/react/transform/Cargo.toml
@@ -26,7 +26,9 @@ swc_plugin_define_dce = { path = "./crates/swc_plugin_define_dce" }
 swc_plugin_directive_dce = { path = "./crates/swc_plugin_directive_dce" }
 swc_plugin_dynamic_import = { path = './crates/swc_plugin_dynamic_import' }
 swc_plugin_inject = { path = "./crates/swc_plugin_inject" }
+swc_plugin_list = { path = "./crates/swc_plugin_list" }
 swc_plugin_shake = { path = './crates/swc_plugin_shake' }
+swc_plugin_snapshot = { path = "./crates/swc_plugin_snapshot" }
 swc_plugin_worklet = { path = "./crates/swc_plugin_worklet" }
 swc_plugins_shared = { path = './crates/swc_plugins_shared' }
 version-compare = { workspace = true }
