--- a/packages/react/transform/crates/swc_plugin_snapshot/Cargo.toml
+++ b/packages/react/transform/crates/swc_plugin_snapshot/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "swc_plugins_shared"
+name = "swc_plugin_snapshot"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,3 +17,4 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["preserve_order"] }
 sha-1 = { workspace = true }
 swc_core = { workspace = true, features = ["base", "ecma_codegen", "ecma_parser", "ecma_minifier", "ecma_transforms_typescript", "ecma_utils", "ecma_quote", "ecma_transforms_react", "ecma_transforms_optimization"] }
+swc_plugins_shared = { path = "../swc_plugins_shared" }
