--- a/packages/react/transform/swc-plugin-reactlynx-compat/Cargo.toml
+++ b/packages/react/transform/swc-plugin-reactlynx-compat/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, default-features = false }
 swc_core = { workspace = true, features = ["base", "ecma_plugin_transform", "ecma_visit", "ecma_utils", "ecma_quote", "ecma_parser"] }
 swc_plugin_compat = { path = "../crates/swc_plugin_compat" }
