--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -202,6 +202,10 @@
     // Not following SemVer
     "stormslowly/rust-cache",
 
+    // Need update dotslash
+    // See comments in packages/web-platform/web-style-transformer/scripts/wasm-bindgen
+    "wasm-bindgen",
+
     // TODO: remove this after drop napi-rs
     "@emnapi/core",
     "@emnapi/runtime",
