--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rustc-hash = "2.1.1"
 serde = "1.0.225"
 serde_json = "1.0.145"
 sha-1 = "0.10.1"
+sugar_path = "1.2.0"
 swc_core = "42.1.0"
 version-compare = "0.2.0"
 wasm-bindgen = "0.2.104"
