--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -38,7 +38,8 @@ catalogs:
   rspack:
     "@rspack/cli": "1.5.8"
     "@rspack/core": "1.5.8"
-    "@rspack/test-tools": "1.5.8"
+    # TODO: Upgrade `@rspack/test-tools` to latest
+    "@rspack/test-tools": "1.5.6"
 
 overrides:
   "@rspack/core": "$@rspack/core"
