--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -202,6 +202,9 @@
     // Not following SemVer
     "stormslowly/rust-cache",
 
+    // Too many breaking change in 1.5.7. Manually upgrade later.
+    "@rspack/test-tools",
+
     // Need update dotslash
     // See comments in packages/web-platform/web-style-transformer/scripts/wasm-bindgen
     "wasm-bindgen",
