--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -174,6 +174,17 @@
         "major",
       ],
     },
+    {
+      "extends": [
+        "monorepo:playwright",
+      ],
+      "groupName": "playwright monorepo",
+      "matchPackageNames": [
+        "playwright",
+        "@playwright/**",
+        "mcr.microsoft.com/playwright",
+      ],
+    },
   ],
 
   "customManagers": [
@@ -186,6 +197,14 @@
       "depNameTemplate": "lynx",
       "packageNameTemplate": "https://github.com/lynx-family/lynx",
       "datasourceTemplate": "git-refs",
+    },
+    {
+      "customType": "regex",
+      "managerFilePatterns": [".github/workflows/*"],
+      "matchStrings": [
+        "'(?<packageName>mcr\\.microsoft\\.com/playwright):(?<currentValue>[^\\s]+)'"
+      ],
+      "datasourceTemplate": "docker",
     },
   ],
 
